编译选项：amd64,增加unzip

--- a/amd64/.config
+++ b/amd64/.config
@@ -79,8 +79,8 @@ CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts-dnspod=y
 CONFIG_PACKAGE_ddns-scripts-services=y
-CONFIG_PACKAGE_ddns-scripts_dnspod=y
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
@@ -222,6 +222,7 @@ CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_udpxy=y
+CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_uwsgi=y
 CONFIG_PACKAGE_uwsgi-cgi-plugin=y
 CONFIG_PACKAGE_uwsgi-luci-support=y
