--- a/.github/workflows/xiaomi-ac2100.yml
+++ b/.github/workflows/xiaomi-ac2100.yml
@@ -144,7 +144,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-firmware-${{ env.DEVICE_NAME }}-${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: 移除旧的 Artifacts
