--- a/.github/workflows/xiaomi-ac2100.yml
+++ b/.github/workflows/xiaomi-ac2100.yml
@@ -125,7 +125,7 @@ jobs:
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "::set-output name=status::success"
-        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: 检查剩余空间
       if: (!cancelled())
