--- a/.github/workflows/amd64-compiler.yml
+++ b/.github/workflows/amd64-compiler.yml
@@ -23,7 +23,7 @@
 # └────────────────────────────────────────────────────────┘
 #
 
-name: amd64
+name: amd64-compiler
 
 on:
   repository_dispatch:
@@ -94,10 +94,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-
-    - name: SSH connection to Actions
-      uses: mxschmitt/action-tmate@v3
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
 
     - name: 编译固件
       id: compile
