修改xiaomi-ac2100也应用新的workflow模式

--- a/.github/workflows/xiaomi-ac2100.yml
+++ b/.github/workflows/xiaomi-ac2100.yml
@@ -26,13 +26,21 @@
 name: xiaomi-ac2100
 
 on:
-  repository_dispatch:
   workflow_dispatch:
     inputs:
+      output:
+        description: '选择编译固件还是生成配置文件'
+        required: true
+        type: choice
+        default: 'firmware'
+        options:
+          - firmware
+          - config
       ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+        description: '当生成配置文件时是否使用ssh'
+        required: true
+        type: boolean
+        default: true
   schedule:
     - cron: 0 8 * * 6
 
@@ -42,14 +50,13 @@ env:
   DEVICE_NAME: xiaomi-ac2100
   FILES: xiaomi-ac2100/files
   FEEDS_CONF: xiaomi-ac2100/feeds.conf
-  CONFIG_FILE: xiaomi-ac2100/.config
+  CONFIG_FILE: xiaomi-ac2100/seed.config
   DIY_P1_SH: xiaomi-ac2100/part1.sh
   DIY_P2_SH: xiaomi-ac2100/part2.sh
-  UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
 
 jobs:
-  compile:
+  run:
     runs-on: ubuntu-20.04
 
     steps:
@@ -62,7 +69,7 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
+        sudo -E apt-get -qq install $(cat depends-ubuntu-2004)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
@@ -96,14 +103,30 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
     - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      uses: mxschmitt/action-tmate@v3
+      if: github.event.inputs.output == 'config' && github.event.inputs.ssh == 'true' && !cancelled()
+
+    - name: 组织配置文件
+      if: github.event.inputs.output == 'config' && !cancelled()
+      id: organize_config
+      run: |
+        cd openwrt
+        rm -f .config.old
+        make defconfig
+        mkdir -p /tmp/upload/config
+        ./scripts/diffconfig.sh > /tmp/upload/config/seed.config
+        echo "::set-output name=status::success"
+        echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
+    - name: 上传配置文件
+      if: steps.organize_config.outputs.status == 'success' && !cancelled()
+      uses: actions/upload-artifact@main
+      with:
+        name: openwrt-config-${{ env.DEVICE_NAME }}-${{ env.FILE_DATE }}
+        path: /tmp/upload
 
     - name: 编译固件
-      id: compile
+      if: github.event.inputs.output != 'config' && !cancelled()
       run: |
         cd openwrt
         make defconfig
@@ -115,33 +138,30 @@ jobs:
         echo "::set-output name=status::success"
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    - name: 检查剩余空间
-      if: (!cancelled())
-      run: df -hT
-
-    - name: 组织文件
-      id: organize
-      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+    - name: 组织固件文件
+      if: github.event.inputs.output != 'config' && !cancelled()
+      id: organize_firmware
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        mkdir -p /tmp/upload/firmware
+        mv ./* /tmp/upload/firmware
         echo "::set-output name=status::success"
 
-    - name: 上传固件目录
+    - name: 上传固件
       uses: actions/upload-artifact@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
+      if: steps.organize_firmware.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt-firmware-${{ env.DEVICE_NAME }}-${{ env.FILE_DATE }}
-        path: ${{ env.FIRMWARE }}
+        name: openwrt-firmware-${{ env.DEVICE_NAME }}-${{ env.FILE_DATE }}
+        path: /tmp/upload/firmware
 
     - name: 移除旧的 Artifacts
       uses: c-hive/gha-remove-artifacts@v1.2.0
       with:
         age: '1 day'
-        skip-recent: 5
+        skip-recent: 20
 
     - name: 删除旧的 workflow 运行记录
       uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 30
+        retain_days: 90
