--- a/amd64/seed.config
+++ b/amd64/seed.config
@@ -105,8 +105,10 @@ CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libsensors=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libudns=y
@@ -115,6 +117,8 @@ CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_libwolfssl is not set
 CONFIG_PACKAGE_libxml2=y
+CONFIG_PACKAGE_lm-sensors=y
+CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-cjson=y
 CONFIG_PACKAGE_lua-maxminddb=y
@@ -175,11 +179,39 @@ CONFIG_PACKAGE_nginx-util=y
 CONFIG_PACKAGE_omcproxy=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_pdnsd-alt=y
+CONFIG_PACKAGE_perl=y
+CONFIG_PACKAGE_perlbase-base=y
+CONFIG_PACKAGE_perlbase-bytes=y
+CONFIG_PACKAGE_perlbase-class=y
+CONFIG_PACKAGE_perlbase-config=y
+CONFIG_PACKAGE_perlbase-cwd=y
+CONFIG_PACKAGE_perlbase-errno=y
+CONFIG_PACKAGE_perlbase-essential=y
+CONFIG_PACKAGE_perlbase-fcntl=y
+CONFIG_PACKAGE_perlbase-file=y
+CONFIG_PACKAGE_perlbase-filehandle=y
+CONFIG_PACKAGE_perlbase-i18n=y
+CONFIG_PACKAGE_perlbase-integer=y
+CONFIG_PACKAGE_perlbase-io=y
+CONFIG_PACKAGE_perlbase-list=y
+CONFIG_PACKAGE_perlbase-locale=y
+CONFIG_PACKAGE_perlbase-params=y
+CONFIG_PACKAGE_perlbase-posix=y
+CONFIG_PACKAGE_perlbase-re=y
+CONFIG_PACKAGE_perlbase-scalar=y
+CONFIG_PACKAGE_perlbase-selectsaver=y
+CONFIG_PACKAGE_perlbase-socket=y
+CONFIG_PACKAGE_perlbase-symbol=y
+CONFIG_PACKAGE_perlbase-tie=y
+CONFIG_PACKAGE_perlbase-unicore=y
+CONFIG_PACKAGE_perlbase-utf8=y
+CONFIG_PACKAGE_perlbase-xsloader=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
+CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_shadowsocks-libev-config=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
@@ -190,6 +222,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_udpxy=y
@@ -217,6 +250,8 @@ CONFIG_PACKAGE_zoneinfo-poles=y
 CONFIG_PACKAGE_zoneinfo-simple=y
 CONFIG_PACKAGE_zoneinfo-southamerica=y
 CONFIG_PCRE_JIT_ENABLED=y
+CONFIG_PERL_NOCOMMENT=y
+CONFIG_PERL_THREADS=y
 CONFIG_TARGET_KERNEL_PARTSIZE=64
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=640
