--- a/amd64/seed.config
+++ b/amd64/seed.config
@@ -104,6 +104,7 @@ CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libqrencode=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsensors=y
 CONFIG_PACKAGE_libsodium=y
@@ -206,6 +207,7 @@ CONFIG_PACKAGE_perlbase-tie=y
 CONFIG_PACKAGE_perlbase-unicore=y
 CONFIG_PACKAGE_perlbase-utf8=y
 CONFIG_PACKAGE_perlbase-xsloader=y
+CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
