--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -104,6 +104,8 @@ jobs:
 
     - name: SSH connection to Actions
       uses: mxschmitt/action-tmate@v3
+      with:
+        limit-access-to-actor: true
       if: github.event.inputs.output == 'config' && github.event.inputs.ssh == 'true' && !cancelled()
 
     - name: 组织配置文件
