--- a/home/seed.config
+++ b/home/seed.config
@@ -3,6 +3,8 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 # CONFIG_GRUB_CONSOLE is not set
 # CONFIG_GRUB_IMAGES is not set
+CONFIG_GRUB_TIMEOUT="1"
+CONFIG_GRUB_TITLE="openwrt"
 CONFIG_HTOP_LMSENSORS=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
@@ -13,8 +15,6 @@ CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBSODIUM_MINIMAL=y
-CONFIG_LUCI_LANG_zh_Hans=y
-CONFIG_LUCI_SRCDIET=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -28,12 +28,12 @@ CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_acme-dnsapi=y
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_bind-host=y
-CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
+CONFIG_PACKAGE_byobu=y
+CONFIG_PACKAGE_byobu-utils=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_cgi-io=y
@@ -54,6 +54,8 @@ CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
 CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_docker-compose=y
+CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_ip-full=y
@@ -81,14 +83,18 @@ CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-wireguard=y
-CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libfdisk=y
+CONFIG_PACKAGE_libffi=y
+CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libiwinfo=y
@@ -97,6 +103,7 @@ CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
+CONFIG_PACKAGE_liblzma=y
 CONFIG_PACKAGE_libmaxminddb=y
 CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libmnl=y
@@ -104,26 +111,28 @@ CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
+CONFIG_PACKAGE_libnewt=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpython3=y
 CONFIG_PACKAGE_libqrencode=y
 CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_libsensors=y
+CONFIG_PACKAGE_libslang2=y
 CONFIG_PACKAGE_libsodium=y
+CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libustream-openssl=y
+# CONFIG_PACKAGE_libustream-wolfssl is not set
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_libxml2=y
-CONFIG_PACKAGE_lm-sensors=y
-CONFIG_PACKAGE_lm-sensors-detect=y
+# CONFIG_PACKAGE_libwolfssl is not set
+CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-cjson=y
 CONFIG_PACKAGE_lua-maxminddb=y
@@ -145,24 +154,9 @@ CONFIG_PACKAGE_luci-app-uugamebooster=y
 CONFIG_PACKAGE_luci-app-vssr=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_luci-i18n-acme-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-omcproxy-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-udpxy-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-lib-base=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-ip=y
@@ -176,7 +170,6 @@ CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
-CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mwan3=y
@@ -184,46 +177,69 @@ CONFIG_PACKAGE_nano-full=y
 CONFIG_PACKAGE_omcproxy=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_pdnsd-alt=y
-CONFIG_PACKAGE_perl=y
-CONFIG_PACKAGE_perlbase-base=y
-CONFIG_PACKAGE_perlbase-bytes=y
-CONFIG_PACKAGE_perlbase-class=y
-CONFIG_PACKAGE_perlbase-config=y
-CONFIG_PACKAGE_perlbase-cwd=y
-CONFIG_PACKAGE_perlbase-errno=y
-CONFIG_PACKAGE_perlbase-essential=y
-CONFIG_PACKAGE_perlbase-fcntl=y
-CONFIG_PACKAGE_perlbase-file=y
-CONFIG_PACKAGE_perlbase-filehandle=y
-CONFIG_PACKAGE_perlbase-i18n=y
-CONFIG_PACKAGE_perlbase-integer=y
-CONFIG_PACKAGE_perlbase-io=y
-CONFIG_PACKAGE_perlbase-list=y
-CONFIG_PACKAGE_perlbase-locale=y
-CONFIG_PACKAGE_perlbase-params=y
-CONFIG_PACKAGE_perlbase-posix=y
-CONFIG_PACKAGE_perlbase-re=y
-CONFIG_PACKAGE_perlbase-scalar=y
-CONFIG_PACKAGE_perlbase-selectsaver=y
-CONFIG_PACKAGE_perlbase-socket=y
-CONFIG_PACKAGE_perlbase-symbol=y
-CONFIG_PACKAGE_perlbase-tie=y
-CONFIG_PACKAGE_perlbase-unicore=y
-CONFIG_PACKAGE_perlbase-utf8=y
-CONFIG_PACKAGE_perlbase-xsloader=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-netstat=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-openwrt=y
 CONFIG_PACKAGE_prometheus-node-exporter-lua-uci_dhcp_host=y
-CONFIG_PACKAGE_px5g-wolfssl=y
+CONFIG_PACKAGE_python3=y
+CONFIG_PACKAGE_python3-asyncio=y
+CONFIG_PACKAGE_python3-attrs=y
+CONFIG_PACKAGE_python3-base=y
+CONFIG_PACKAGE_python3-bcrypt=y
+CONFIG_PACKAGE_python3-cached-property=y
+CONFIG_PACKAGE_python3-certifi=y
+CONFIG_PACKAGE_python3-cffi=y
+CONFIG_PACKAGE_python3-cgi=y
+CONFIG_PACKAGE_python3-cgitb=y
+CONFIG_PACKAGE_python3-chardet=y
+CONFIG_PACKAGE_python3-codecs=y
+CONFIG_PACKAGE_python3-cryptography=y
+CONFIG_PACKAGE_python3-ctypes=y
+CONFIG_PACKAGE_python3-dbm=y
+CONFIG_PACKAGE_python3-decimal=y
+CONFIG_PACKAGE_python3-distro=y
+CONFIG_PACKAGE_python3-distutils=y
+CONFIG_PACKAGE_python3-docker=y
+CONFIG_PACKAGE_python3-dockerpty=y
+CONFIG_PACKAGE_python3-docopt=y
+CONFIG_PACKAGE_python3-dotenv=y
+CONFIG_PACKAGE_python3-email=y
+CONFIG_PACKAGE_python3-gdbm=y
+CONFIG_PACKAGE_python3-idna=y
+CONFIG_PACKAGE_python3-jsonschema=y
+CONFIG_PACKAGE_python3-light=y
+CONFIG_PACKAGE_python3-logging=y
+CONFIG_PACKAGE_python3-lzma=y
+CONFIG_PACKAGE_python3-multiprocessing=y
+CONFIG_PACKAGE_python3-ncurses=y
+CONFIG_PACKAGE_python3-newt=y
+CONFIG_PACKAGE_python3-openssl=y
+CONFIG_PACKAGE_python3-paramiko=y
+CONFIG_PACKAGE_python3-pkg-resources=y
+CONFIG_PACKAGE_python3-ply=y
+CONFIG_PACKAGE_python3-pycparser=y
+CONFIG_PACKAGE_python3-pydoc=y
+CONFIG_PACKAGE_python3-pynacl=y
+CONFIG_PACKAGE_python3-pyrsistent=y
+CONFIG_PACKAGE_python3-readline=y
+CONFIG_PACKAGE_python3-requests=y
+CONFIG_PACKAGE_python3-setuptools=y
+CONFIG_PACKAGE_python3-six=y
+CONFIG_PACKAGE_python3-sqlite3=y
+CONFIG_PACKAGE_python3-texttable=y
+CONFIG_PACKAGE_python3-unittest=y
+CONFIG_PACKAGE_python3-urllib=y
+CONFIG_PACKAGE_python3-urllib3=y
+CONFIG_PACKAGE_python3-websocket-client=y
+CONFIG_PACKAGE_python3-xml=y
+CONFIG_PACKAGE_python3-yaml=y
 CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
-CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_shadowsocks-libev-config=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
@@ -234,18 +250,14 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_uugamebooster=y
-CONFIG_PACKAGE_uwsgi=y
-CONFIG_PACKAGE_uwsgi-cgi-plugin=y
-CONFIG_PACKAGE_uwsgi-luci-support=y
-CONFIG_PACKAGE_uwsgi-syslog-plugin=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_xray-core=y
@@ -264,13 +276,17 @@ CONFIG_PACKAGE_zoneinfo-pacific=y
 CONFIG_PACKAGE_zoneinfo-poles=y
 CONFIG_PACKAGE_zoneinfo-simple=y
 CONFIG_PACKAGE_zoneinfo-southamerica=y
+CONFIG_PACKAGE_zsh=y
 CONFIG_PCRE_JIT_ENABLED=y
-CONFIG_PERL_NOCOMMENT=y
-CONFIG_PERL_THREADS=y
-CONFIG_TARGET_KERNEL_PARTSIZE=64
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
+CONFIG_TARGET_KERNEL_PARTSIZE=128
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
-CONFIG_TARGET_ROOTFS_PARTSIZE=640
-CONFIG_VDI_IMAGES=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=896
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
