--- a/.github/workflows/xiaomi-ac2100.yml
+++ b/.github/workflows/xiaomi-ac2100.yml
@@ -117,7 +117,7 @@ jobs:
         make defconfig
         mkdir -p /tmp/upload/config
         ./scripts/diffconfig.sh > /tmp/upload/config/seed.config
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: 上传配置文件
@@ -137,7 +137,7 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: 组织固件文件
@@ -148,7 +148,7 @@ jobs:
         rm -rf packages
         mkdir -p /tmp/upload/firmware
         mv ./* /tmp/upload/firmware
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 上传固件
       uses: actions/upload-artifact@main
